Improving break/continue handling in completesNormally.